[package]
name = "rustbot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }  # Added for HTTP requests
base64 = "0.21"                                     # Added for base64 decoding
bincode = "1.3"                                     # Added for binary serialization